--- a/Scout2B1.ipynb
+++ b/Scout2B1.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Scout2B1.ipynb",
       "provenance": [],
-      "private_outputs": true,
       "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
@@ -78,19 +77,23 @@
         "colab": {}
       },
       "source": [
-        "from google.colab import drive\n",
         "import os\n",
-        "google_drive_dir = '/content/drive/My Drive/scout2B1'\n",
-        "local_scratch_dir = '/content'\n",
-        "drive.mount('/content/drive')\n",
-        "if not os.path.isdir(google_drive_dir):\n",
-        "  os.mkdir(google_drive_dir)\n",
-        "os.chdir(google_drive_dir)\n",
         "\n",
-        "# select where to store the data - a free google account is sufficient to store all data in this example. \n",
-        "data_directory = google_drive_dir\n",
-        "# However, if you need more storage, you can store the data on the local scratch diretory:\n",
-        "# data_directory = local_scratch_dir\n",
+        "try: \n",
+        "  from google.colab import drive\n",
+        "  google_drive_dir = '/content/drive/My Drive/scout2B1'\n",
+        "  # select where to store the data - a free google account is sufficient to store all data in this example. \n",
+        "  data_directory = google_drive_dir\n",
+        "  # data_directory = local_scratch_dir\n",
+        "  drive.mount('/content/drive')\n",
+        "except:\n",
+        "  local_scratch_dir = '/content'\n",
+        "  data_directory = local_scratch_dir\n",
+        "\n",
+        "if not os.path.isdir(data_directory):\n",
+        "    os.mkdir(data_directory)\n",
+        "os.chdir(data_directory)\n",
+        "\n",
         "\n",
         "# define working directory\n",
         "work_dir = os.path.join(data_directory,'osfstorage')\n",
